- '0. Foreword' added - fixed style in two documents: '1. The Foundation' and '2. Development'

--- a/docs/engx/1. The Foundation of EngX .md
+++ b/docs/engx/1. The Foundation of EngX .md
@@ -32,7 +32,7 @@ tags: [EngX]
       - [Inspection](#inspection)
       - [Adaptation](#adaptation)
     - [Tips for Implementing Scrum](#tips-for-implementing-scrum)
-  - [Best Practices for Agile](#best-practices-for-agile)
+    - [Best Practices for Agile](#best-practices-for-agile)
   - [The EngX Culture](#the-engx-culture)
     - [The Agile Engineer](#the-agile-engineer)
     - [Thriving in a Culture of Engineering Excellence](#thriving-in-a-culture-of-engineering-excellence)
@@ -44,6 +44,8 @@ tags: [EngX]
   - [Engineering Practices in Agile-Driven Software Development](#engineering-practices-in-agile-driven-software-development)
     - [Basic SDLC](#basic-sdlc)
     - [Building an Agile SDLC](#building-an-agile-sdlc)
+      - [Action 1. Make changes faster](#action-1-make-changes-faster)
+      - [Action 2. Produce a shippable product increment](#action-2-produce-a-shippable-product-increment)
     - [Key Principles of Agile-Driven Software Development](#key-principles-of-agile-driven-software-development)
     - [Implementing the Key Principles with CI/CD](#implementing-the-key-principles-with-cicd)
       - [Continuous Integration](#continuous-integration)
@@ -237,6 +239,7 @@ The Agile methodology seeks to streamline project work by focusing on three key 
 1. adaptability,
 2. user experience,
 3. and testing.
+
 Each of these focus points can help your team create a more holistic and streamlined design and development process.
 
 Методология Agile направлена ​​на оптимизацию работы над проектом, сосредоточив внимание на трех ключевых областях:
@@ -244,6 +247,7 @@ Each of these focus points can help your team create a more holistic and streaml
 1. адаптивность,
 2. взаимодействие с пользователем
 3. и тестирование.
+
 Каждое из этих направлений может помочь вашей команде создать более целостный и оптимизированный процесс проектирования и разработки.
 
  . | waterfall | agile
@@ -258,6 +262,7 @@ Despite its drawbacks, there are times when a waterfall approach may still be th
 - The project/requirements/customer demand is not prone to change;
 - The project is small in scope;
 - The speed of delivery is not a priority.
+
 However, these situations are the exception—not the rule. To respond to evolving customer demands and keep up with constant change, software development teams and projects must transition to Agile.
 
 Несмотря на свои недостатки, бывают случаи, когда водопадный подход все еще может быть предпочтительным, в том числе когда:
@@ -265,6 +270,7 @@ However, these situations are the exception—not the rule. To respond to evolvi
 - Проект/требования/потребительский спрос не подвержены изменениям;
 - Проект невелик по масштабам;
 - Скорость доставки не является приоритетом.
+
 Однако эти ситуации являются исключением, а не правилом. Чтобы реагировать на меняющиеся требования клиентов и идти в ногу с постоянными изменениями, команды разработчиков программного обеспечения и проекты должны перейти на Agile.
 
 #### Disadvantages of using Agile
@@ -292,6 +298,7 @@ Implementing the Scrum framework means adhering to short, timeboxed iterations c
 - Sprint Planning: an event when all team members initiate the Sprint by laying out the work to perform
 - Sprint Review: a timeboxed working session when the team and key stakeholders review the outcomes of a Sprint and identify future steps
 - Sprint Retrospective: an event when team members discuss what went well, what could be improved, and commit to improvements in the next Sprint
+
 Engaging in these events enables your team to communicate openly about your progress, share and discuss feedback, and remain adaptive to changing needs and requirements.
 
 Внедрение фреймворка Scrum означает выполнение коротких итераций с ограничением по времени, называемых спринтами. Работа в спринтах дает командам множество возможностей быстро получать обратную связь на разных уровнях. Во время каждого спринта команды участвуют в ежедневных кратких встречах, на которых выполняется проверка - что сделано, что еще должно быть сделано, какие есть проблемы - это позволяет членам команды оценить, насколько успешно они продвигаются к цели спринта. Другие события, которые происходят один раз за спринт, включают:
@@ -299,34 +306,31 @@ Engaging in these events enables your team to communicate openly about your prog
 - Планирование спринта: событие, когда все члены команды инициируют спринт, распределяя работу, которую необходимо выполнить;
 - Обзор спринта: ограниченная по времени рабочая сессия, во время которой команда и ключевые заинтересованные стороны анализируют результаты спринта и определяют будущие шаги;
 - Ретроспектива спринта: мероприятие, на котором члены команды обсуждают, что прошло хорошо, что можно было бы улучшить, и обязуются улучшить в следующем спринте;
+
 Участие в этих мероприятиях позволяет вашей команде открыто сообщать о вашем прогрессе, делиться отзывами и обсуждать их, а также оставаться адаптивной к меняющимся потребностям.
 
 #### Sprint
 
 Sprints — это пульс Scrum, где идеи превращаются в ценность.
 
-Это событие фиксированной продолжительности не более одного месяца для обеспечения
-согласованности. Новый Sprint начинается сразу после завершения предыдущего.
+Это событие фиксированной продолжительности не более одного месяца для обеспечения согласованности. Новый Sprint начинается сразу после завершения предыдущего.
 
-Вся работа, необходимая для достижения Product Goal, включая события Sprint Planning, Daily
-Scrum, Sprint Review и Sprint Retrospective, выполняется в рамках Sprints.
+Вся работа, необходимая для достижения Product Goal, включая события Sprint Planning, Daily Scrum, Sprint Review и Sprint Retrospective, выполняется в рамках Sprints.
 
 В ходе Sprint:
 • не вносятся изменения, которые могут поставить под угрозу Sprint Goal;
 • не снижается качество;
 • Product Backlog уточняется по мере необходимости; а также, по мере появления новых знаний содержание работы может быть уточнено и пересмотрено с Product Owner.
 
-Sprints создают условия для предсказуемости, обеспечивая инспекцию и адаптацию прогресса в
-достижении Product Goal как минимум один раз в месяц. При большей длительности Sprint
-возможны:
+Sprints создают условия для предсказуемости, обеспечивая инспекцию и адаптацию прогресса в достижении Product Goal как минимум один раз в месяц. При большей длительности Sprint возможны:
 
 - потеря актуальности Sprint Goal,
 - повышение комплексности,
 - рост рисков.
+
 Более короткие Sprints позволяют пройти большее количество циклов обучения, и ограничить риски стоимости и трудозатрат меньшим отрезком времени. Каждый Sprint можно считать коротким проектом.
 
-Существуют различные техники прогнозирования прогресса, например, burn-down, burn-up и
-кумулятивные диаграммы потока. Несмотря на то, что их польза доказана, они не могут заменить важность эмпиризма. В комплексных средах неизвестно, что произойдет. Принятие решений, ориентированных на будущее, может базироваться только на том, что уже произошло.
+Существуют различные техники прогнозирования прогресса, например, burn-down, burn-up и кумулятивные диаграммы потока. Несмотря на то, что их польза доказана, они не могут заменить важность эмпиризма. В комплексных средах неизвестно, что произойдет. Принятие решений, ориентированных на будущее, может базироваться только на том, что уже произошло.
 
 Sprint может быть отменен, если Sprint Goal потеряла актуальность. Только Product Owner имеет право отменить Sprint.
 
@@ -334,87 +338,58 @@ Sprint может быть отменен, если Sprint Goal потеряла
 
 Sprint Planning инициирует Sprint, планируя работу, которую необходимо выполнить в этом Sprint. Результатом события становится план, созданный совместными усилиями всей Scrum Team.
 
-Product Owner обеспечивает готовность участников к обсуждению наиболее важных элементов
-Product Backlog и их связи с Product Goal. Scrum Team может приглашать на Sprint Planning для консультаций и других людей.
+Product Owner обеспечивает готовность участников к обсуждению наиболее важных элементов Product Backlog и их связи с Product Goal. Scrum Team может приглашать на Sprint Planning для консультаций и других людей.
 
 В ходе Sprint Planning рассматриваются следующие темы:
 
 ##### Тема первая: почему этот Sprint ценен?
 
-Product Owner предлагает, как можно повысить ценность и практичность продукта в текущем
-Sprint. Затем вся Scrum Team совместно определяет Sprint Goal, которая объясняет, почему Sprint ценен для заинтересованных лиц. Sprint Goal должна быть сформулирована до окончания Sprint Planning.
+Product Owner предлагает, как можно повысить ценность и практичность продукта в текущем Sprint. Затем вся Scrum Team совместно определяет Sprint Goal, которая объясняет, почему Sprint ценен для заинтересованных лиц. Sprint Goal должна быть сформулирована до окончания Sprint Planning.
 
 ##### Тема вторая: что может быть готово в этом Sprint?
 
 Developers обсуждают с Product Owner, какие элементы Product Backlog выбрать для включения в текущий Sprint. Scrum Team может попутно уточнять эти элементы, чтобы улучшить понимание и повысить уверенность.
 
-Выбор элементов, которые получится завершить за Sprint, может оказаться трудной задачей.
-Однако, чем больше Developers знают о своей прошлой производительности, своих возможностях
-на следующий Sprint и своем определении готовности, тем более уверенно они могут
-прогнозировать работу на следующий Sprint.
+Выбор элементов, которые получится завершить за Sprint, может оказаться трудной задачей. Однако, чем больше Developers знают о своей прошлой производительности, своих возможностях на следующий Sprint и своем определении готовности, тем более уверенно они могут прогнозировать работу на следующий Sprint.
 
 ##### Тема третья: как будет выполняться выбранная работа?
 
-Developers для каждого выбранного элемента Product Backlog планируют работу, необходимую
-для создания Increment, соответствующего определению готовности. Это часто делается путем
-декомпозиции элементов Product Backlog на более мелкие задачи продолжительностью не более
-одного дня. То, как это делается, остается на усмотрение разработчиков. Никто не указывает им, как превращать элементы Product Backlog в Increments ценности.
+Developers для каждого выбранного элемента Product Backlog планируют работу, необходимую для создания Increment, соответствующего определению готовности. Это часто делается путем декомпозиции элементов Product Backlog на более мелкие задачи продолжительностью не более одного дня. То, как это делается, остается на усмотрение разработчиков. Никто не указывает им, как превращать элементы Product Backlog в Increments ценности.
 
-Sprint Goal, выбранные элементы Product Backlog, плюс план их реализации вместе называются
-Sprint Backlog.
+Sprint Goal, выбранные элементы Product Backlog, плюс план их реализации вместе называются Sprint Backlog.
 
-Sprint Planning ограничено по времени максимум восемью часами для одномесячного Sprint. Для
-более коротких Sprints событие обычно короче.
+Sprint Planning ограничено по времени максимум восемью часами для одномесячного Sprint. Для более коротких Sprints событие обычно короче.
 
 #### Daily Scrum
 
 Цель Daily Scrum — инспекция прогресса в достижении Sprint Goal, адаптация Sprint Backlog по мере необходимости, корректировка запланированной предстоящей работы.
 
-Daily Scrum — это 15-минутное событие для Developers, входящих в Scrum Team. Для снижения
-комплексности событие проводится в одно и то же время, в одном и том же месте, каждый
-рабочий день в ходе Sprint. Если Product Owner или Scrum Master активно работают над
-элементами из Sprint Backlog, то они участвуют в событии в качестве Developers.
+Daily Scrum — это 15-минутное событие для Developers, входящих в Scrum Team. Для снижения комплексности событие проводится в одно и то же время, в одном и том же месте, каждый рабочий день в ходе Sprint. Если Product Owner или Scrum Master активно работают над элементами из Sprint Backlog, то они участвуют в событии в качестве Developers.
 
 Developers могут выбирать любую структуру и техники, которые сочтут нужными, при условии, что их Daily Scrum фокусируется на достижении Sprint Goal и создает план действий на следующий рабочий день. Это обеспечивает сфокусированность и улучшает самоуправление.
 
-События Daily Scrum улучшают коммуникации, выявляют препятствия, способствуют быстрому
-принятию решений и, следовательно, устраняют необходимость в других встречах.
+События Daily Scrum улучшают коммуникации, выявляют препятствия, способствуют быстрому принятию решений и, следовательно, устраняют необходимость в других встречах.
 
-Developers разрешено корректировать свой план не только во время Daily Scrum. Они часто
-встречаются в течение дня для более подробного обсуждения возможностей адаптации и
-перепланирования оставшейся работы Sprint.
+Developers разрешено корректировать свой план не только во время Daily Scrum. Они часто встречаются в течение дня для более подробного обсуждения возможностей адаптации и перепланирования оставшейся работы Sprint.
 
 #### Sprint Review
 
-Цель Sprint Review — инспекция результата Sprint и выявление возможностей для адаптации.
-Scrum Team представляет результаты своей работы ключевым заинтересованным лицам, и
-обсуждает прогресс в достижении Product Goal.
+Цель Sprint Review — инспекция результата Sprint и выявление возможностей для адаптации. Scrum Team представляет результаты своей работы ключевым заинтересованным лицам, и обсуждает прогресс в достижении Product Goal.
 
-Во время события Scrum Team и заинтересованные лица анализируют, что было достигнуто в ходе
-Sprint, и что изменилось в их окружении. На основе этой информации участники совместно
-решают, что делать дальше. Product Backlog также может быть скорректирован с учетом новых
-возможностей. Sprint Review — это рабочая сессия, и не сводится к презентации.
+Во время события Scrum Team и заинтересованные лица анализируют, что было достигнуто в ходе Sprint, и что изменилось в их окружении. На основе этой информации участники совместно решают, что делать дальше. Product Backlog также может быть скорректирован с учетом новых возможностей. Sprint Review — это рабочая сессия, и не сводится к презентации.
 
-Sprint Review является предпоследним событием Sprint и ограничено по времени максимум
-четырьмя часами для одномесячного Sprint. Для более коротких Sprints событие обычно короче.
+Sprint Review является предпоследним событием Sprint и ограничено по времени максимум четырьмя часами для одномесячного Sprint. Для более коротких Sprints событие обычно короче.
 
 #### Sprint Retrospective
 
 Цель Sprint Retrospective — запланировать повышение качества и эффективности.
 
-Scrum Team инспектирует то, как прошел последний Sprint в отношении людей, взаимодействий,
-процессов, инструментов и определения готовности. Инспектируемые элементы зависят от
-предметной области выполняемой работы и могут быть очень разными. Выявляются
-предположения, которые сбили Scrum Team с пути, и исследуется их происхождение. Участники
-Scrum Team обсуждают, что прошло хорошо во время Sprint, с какими проблемами они
-столкнулись, и как эти проблемы были (или не были) решены.
+Scrum Team инспектирует то, как прошел последний Sprint в отношении людей, взаимодействий, процессов, инструментов и определения готовности. Инспектируемые элементы зависят от предметной области выполняемой работы и могут быть очень разными. Выявляются предположения, которые сбили Scrum Team с пути, и исследуется их происхождение. Участники Scrum Team обсуждают, что прошло хорошо во время Sprint, с какими проблемами они столкнулись, и как эти проблемы были (или не были) решены.
 
-Scrum Team определяет наиболее полезные для повышения эффективности изменения.
-Улучшения с самым высоким влиянием реализуются в кратчайшие сроки. Они могут даже быть
+Scrum Team определяет наиболее полезные для повышения эффективности изменения. Улучшения с самым высоким влиянием реализуются в кратчайшие сроки. Они могут даже быть
 добавлены в Sprint Backlog следующего Sprint.
 
-Sprint Retrospective завершает Sprint. Оно ограничено по времени максимум тремя часами для
-одномесячного Sprint. Для более коротких Sprints событие обычно короче.
+Sprint Retrospective завершает Sprint. Оно ограничено по времени максимум тремя часами для одномесячного Sprint. Для более коротких Sprints событие обычно короче.
 
 ### Three Pillars of Scrum
 
@@ -470,7 +445,7 @@ Consider how you can begin to take your projects to the next level by implementi
 
 Подумайте, как вы можете начать выводить свои проекты на новый уровень, внедрив Scrum, и поразмышляйте о преимуществах, которые могла бы получить ваша команда, включив прозрачность, проверку и адаптацию в свой повседневный рабочий процесс.
 
-## Best Practices for Agile
+### Best Practices for Agile
 
 - Create and maintain a product backlog that is used as a single source for your tasks. - Создавайте и поддерживайте журнал невыполненных работ по продукту, который используется в качестве единого источника для ваших задач.
 - Update and prioritize a backlog regularly with the team. - Регулярно обновляйте вместе с командой список невыполненных работ и определяйте их приоритетность.
@@ -514,10 +489,11 @@ Within these cross-functional teams, Agile engineers demonstrate key behavior pa
 
 Behavioral patterns that Agile engineers follow to make their work effective.
 
-- Acting with Empowerment and Motivation
-- Building Trust and Owning Actions
-- Being Able to Self-Organize
-- Collaborating Effectively in a Team
+- Acting with Empowerment and Motivation,
+- Building Trust and Owning Actions,
+- Being Able to Self-Organize,
+- Collaborating Effectively in a Team.
+
 These behavior patterns help Agile engineers be proactive and effective at both an individual and team level.
 
 Поведенческие модели, которым следуют Agile инженеры, чтобы сделать свою работу эффективной:
@@ -526,6 +502,7 @@ These behavior patterns help Agile engineers be proactive and effective at both 
 - Выстраивание доверия к себе, ответственность за свои слова и действия. Доверие к вам основано на 4х ваших свойствах - компетентность, последовательность, честность и сострадание - и зависит от того, как вы взаимодействует с командой и с каждым членом команды отдельно. Также вы признаете свою роль в происходящем. Если ваше сообщение причиняет кому-то вред, вы готовы проанализировать, почему так получилось. Вы не вините других, когда виноваты сам. Вы не ищите оправданий для своих решений, действий, бездействий. Простая человеческая психология.
 - Способность к самоорганизации. Термин "Самоорганизация" означает процесс, когда индивиды организуют свое общественное поведение для создания некоего порядка путем взаимодействия между собой, а не под внешним руководством или следуя чьим-то инструкциям, директивам, приказам.
 - Эффективное сотрудничество в команде. Все члены команды работают вместе для достижения общей цели.
+
 Эти модели поведения помогают Agile инженерам быть активными и эффективными как на индивидуальном, так и на командном уровне.
 
 Apart from Agile behavioral patterns, all team members (not only engineers) usually build their work in line with the values of their selected framework. For example, if a team chooses Scrum, they consider and incorporate Scrum values. Commitment to the values empowers team members to act proactively, responsibly, and effectively both individually and as a group.
@@ -543,6 +520,7 @@ A culture of Engineering Excellence enables engineers to:
 - Focus on delivering the highest business priority work items in a complex environment, which reduces work stress
 - Develop new features instead of performing recurring manual tasks such as regression testing or deployments
 - Reduce defects and rework with faster feedback cycles
+
 For these benefits to exist, the key characteristics of an EngX culture must be in place.
 
 Культура инженерного совершенства позволяет инженерам:
@@ -550,6 +528,7 @@ For these benefits to exist, the key characteristics of an EngX culture must be 
 - Сосредотачиваться на выполнении заданий с наивысшим бизнес-приоритетом в сложной среде, что снижает стресс на работе;
 - Разрабатывать новые функции вместо выполнения повторяющихся ручных задач, таких как регрессионное тестирование или развертывание;
 - Уменьшайть количество дефектов и переделок благодаря более быстрым циклам обратной связи.
+
 Для того, чтобы эти преимущества существовали, должны существовать ключевые характеристики EngX culture.
 
 The characteristics of a culture of Engineering Excellence:
@@ -558,6 +537,7 @@ The characteristics of a culture of Engineering Excellence:
 - Agile Leadership Support
 - Optimal Project Environment
 - Agreement on the Definition of Done
+
 An EngX culture provides a safe environment where all team members share a clear understanding of a project’s goals and roadmap, which ensures they focus on current priorities and produce meaningful outcomes.
 
 Характеристики культуры инженерного совершенства:
@@ -566,6 +546,7 @@ An EngX culture provides a safe environment where all team members share a clear
 - Поддержка Agile лидерства - сотрудничество, коммуникация и координация - такой подход гарантирует постоянное достижение прогресса и быстрое решение любых вопросов или неполадок;
 - Оптимальная проектная среда - проектная среда - это все внутренние и внешние силы, которые влияют на управление вашим проектом, на график работ по проекту, на бюджет проекта, моральный дух команды и многое другое;
 - Соглашение DoD (определении сделанного, Definition of Done) - DoD - это контракт между разработчиками и заинтересованными сторонами, в котором указано, какие показатели или контрольные точки должны быть выполнены, чтобы проект считался "выполненным".
+
 Культура EngX обеспечивает безопасную среду, в которой все члены команды разделяют четкое понимание целей проекта и дорожной карты, что гарантирует, что они сосредоточатся на текущих приоритетах и добьются значимых результатов.
 
 EngX is crucial to supporting agility in your projects. It also creates an environment where engineers are empowered to do their best, contribute to their team and project’s success, and constantly improve professional skills. These outcomes are essential factors that help your team deliver value to your client.
@@ -621,6 +602,7 @@ Follow the behavioral patterns that will allow you to maximize your contribution
 - Build trust and own your actions
 - Self-organize your work
 - Collaborate effectively in a team
+
 Adhere to Engineering Excellence practices throughout the entire project to deliver value to your client
 
 Следуйте поведенческим моделям, которые позволят вам максимально увеличить свой вклад в межфункциональную команду и эффективно общаться с вашим клиентом:
@@ -629,6 +611,7 @@ Adhere to Engineering Excellence practices throughout the entire project to deli
 - Укрепляйте доверие к себе и контролируйте свои действия;
 - Самостоятельно организуйте свою работу;
 - Эффективно сотрудничайте в команде.
+
 Придерживайтесь принципов инженерного совершенства на протяжении всего проекта, чтобы обеспечить ценность для вашего клиента.
 
 ## Engineering Practices in Agile-Driven Software Development
@@ -651,7 +634,8 @@ A typical SDLC is comprised of six phases:
 4. Testing,
 5. User Acceptance Testing (UAT)/Staging,
 6. and Maintenance.
-Depending on your client’s needs and project requirements, your SDLC phases might be referred to by different names or happen in a different sequence. The phases may also vary in duration and/or number.
+
+**Depending on your client’s needs and project requirements, your SDLC phases might be referred to by different names or happen in a different sequence. The phases may also vary in duration and/or number.**
 
 Типичный SDLC состоит из шести этапов:
 
@@ -661,7 +645,8 @@ Depending on your client’s needs and project requirements, your SDLC phases mi
 4. тестирование,
 5. Приемочное тестирование пользователя (UAT)/Промежуточная стадия
 6. и техническое обслуживание.
-В зависимости от потребностей вашего клиента и требований проекта этапы SDLC могут называться по-разному или выполняться в разной последовательности. Фазы также могут различаться по продолжительности и/или количеству.
+
+**В зависимости от потребностей вашего клиента и требований проекта этапы SDLC могут называться по-разному или выполняться в разной последовательности. Фазы также могут различаться по продолжительности и/или количеству.**
 
 When your client wants to enhance their business agility, your team can help them reach this goal by modifying the typical SDLC by applying practices, processes, and tools that support Agile principles.
 
@@ -693,25 +678,29 @@ Making your SDLC Agile will empower the team to incorporate regular client feedb
 
 Обеспечение гибкости вашего SDLC позволит команде гибко учитывать отзывы постоянных клиентов, определять приоритеты наиболее ценных функций и получать тестируемый результат. Чтобы достичь этих целей, ваша команда должна предпринять два действия.
 
-Action 1. Make changes faster without increasing costs or degrading quality.
+#### Action 1. Make changes faster
+
+Make changes faster without increasing costs or degrading quality.
 
 Your client’s primary goal is to provide a high-quality product that will increase user satisfaction, bring value as soon as possible, and help the company gain a competitive market advantage. Clients also want to keep the software development process cost-effective.
 
 Your team can help your clients reach those goals by prioritizing the introduction of changes to address any current solution gaps and improve product quality effectively. Regularly making changes saves time and money in the long run, while postponing changes can have a critical impact on your project—like having to rebuild your solution at a later stage.
 
-Действие 1. Ускоряйте внесение изменений без увеличения затрат или ухудшения качества.
+Ускоряйте внесение изменений без увеличения затрат или ухудшения качества.
 
 Основная цель вашего клиента - предоставить высококачественный продукт, который повысит удовлетворенность пользователей, принесет пользу в кратчайшие сроки и поможет компании получить конкурентное преимущество на рынке. Клиенты также хотят, чтобы процесс разработки программного обеспечения был экономически эффективным.
 
 Ваша команда может помочь вашим клиентам достичь этих целей, уделяя приоритетное внимание внедрению изменений для устранения любых существующих пробелов в решениях и эффективного повышения качества продукции. Регулярное внесение изменений экономит время и деньги в долгосрочной перспективе, в то время как отсрочка изменений может оказать решающее влияние на ваш проект — например, необходимость перестроить ваше решение на более позднем этапе.
 
-Action 2. Produce a potentially shippable (ready for detailed customer feedback) product increment at the end of each iteration.
+#### Action 2. Produce a shippable product increment
+
+Produce a potentially shippable (ready for detailed customer feedback) product increment at the end of each iteration.
 
 Regular feedback from your client is crucial to ensure that you are on the same page about solution requirements. Your client might add or modify requirements at some point, and your team must be able to adjust quickly. Your team can prepare for quick adjustments by delivering a product increment with each iteration (e.g., a new feature) that is ready for client testing and a potential release.
 
 This action is useful not only for trying out a real product with end users but also if your team needs to create a minimum viable product (MVP) to test a business idea. Engineers can use the feedback they receive on this bare minimum version for further improvement of the product.
 
-Действие 2. В конце каждой итерации создайте потенциально готовый к отправке продукт (готовый к подробной обратной связи с клиентом).
+В конце каждой итерации создайте потенциально готовый к отправке продукт (готовый к подробной обратной связи с клиентом).
 
 Регулярная обратная связь от вашего клиента имеет решающее значение для обеспечения того, чтобы вы были на одной волне относительно требований к решению. В какой-то момент ваш клиент может добавить или изменить требования, и ваша команда должна иметь возможность быстро адаптироваться. Ваша команда может подготовиться к быстрой корректировке, предоставляя приращение продукта с каждой итерацией (например, новую функцию), готовое к тестированию клиента и потенциальному выпуску.
 
@@ -733,6 +722,7 @@ Principles:
  2. Shift Feedback Left
  3. Automate All Repeatable Tasks
  4. Follow Lean and PDCA Practices
+
 Your team should integrate these software development principles into your project practices by adopting a CI/CD workflow.
 
 Принципы:
@@ -741,6 +731,7 @@ Your team should integrate these software development principles into your proje
 2. Сдвиньте обратную связь влево - это практика переноса тестирования, оценки качества и производительности на раннюю стадию процесса разработки, часто до написания какого-либо кода; тестирование со сдвигом влево помогает командам предвидеть изменения, возникающие в процессе разработки, которые могут повлиять на производительность или другие процессы доставки;
 3. Автоматизируйте все повторяющиеся задачи;
 4. Следуйте практикам [Lean](https://www.pmi.org/learning/library/lean-project-management-7364) и [PDCA](https://www.pmi.org/learning/library/know-status-project-monitoring-controlling-5982) (Plan-Do-Check-Act).
+
 Ваша команда должна интегрировать эти принципы разработки программного обеспечения в практику вашего проекта, внедрив рабочий процесс CI/CD.
 
 ### Implementing the Key Principles with CI/CD
